--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,6 +1,22 @@
-@media only screen and (max-width: 1200px) and (min-width: 990px){
+/* @media only screen and (max-width: 1200px) and (min-width: 990px){
   .ui.stackable.grid {
     margin-left: 0rem !important;
     margin-right: 0rem !important;
+  }
+} */
+.ui.grid {
+  justify-content: center;
+}
+
+.row {
+  margin-bottom: 2rem;
+}
+li {
+  list-style: none;
+}
+
+@media only screen and (max-width: 1000px) {
+  #email {
+    font-size: 0.9rem;
   }
 }
