--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,26 @@
-body {
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  border :0;
+  outline :0;
+  box-sizing: border-box;
+  list-style: none;
+  text-decoration: none;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+:root {
+  --color-bg-nav:#E5E3E4; 
+  --color-bg-variant: #469597;
+  --color-primary: #D0C9D0;;
+  --color-primary-variant: rgba(77, 181, 255, 0.4 );
+  --color-white: #BBC6C8;
+  --color-light : #6A7793;
+
+
+  --container-width-lg: 75%;
+  --container-width-md: 85%;
+  --container-width-sm: 90%;
+
+  --transition: all 400ms ease;
+
 }
