--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,7 @@
-* {
-  margin: 0;
-  padding: 0;
-  border :0;
-  outline :0;
-  box-sizing: border-box;
-  list-style: none;
-  text-decoration: none;
-}
+@import url('https://fonts.googleapis.com/css2?family=Cormorant+Upright:wght@300;400;500;600;700&family=Open+Sans:wght@300;400;500;600;700&display=swap');
 
 :root {
+  --font-base: 'Cormorant Upright', serif;
   --color-bg-nav:#E5E3E4; 
   --color-bg-variant: #469597;
   --color-primary: #D0C9D0;;
@@ -21,6 +14,43 @@
   --container-width-md: 85%;
   --container-width-sm: 90%;
 
-  --transition: all 400ms ease;
+}
 
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  scroll-behavior: smooth;
+}
+
+a {
+  color: unset;
+  text-decoration: none;
+}
+
+.slide-bottom {
+  -webkit-animation: slide-bottom 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+	animation: slide-bottom 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+}
+
+@-webkit-keyframes slide-bottom {
+  0% {
+    -webkit-transform: translateY(-25%);
+            transform: translateY(-25%);
+  }
+  100% {
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+  }
+}
+
+@keyframes slide-bottom {
+  0% {
+    -webkit-transform: translateY(-25%);
+            transform: translateY(-25%);
+  }
+  100% {
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+  }
 }
