change color and Home jsx edit

--- a/src/components/Nav/nav.css
+++ b/src/components/Nav/nav.css
@@ -1,11 +1,10 @@
 
 nav {
-    background:var(--color-bg-nav);
+    
+    background:transparent;
     gap: 0.8rem;
     display: flex;
     justify-content:center;
-    border: solid black;
-    height: 6rem;
     width: 100%;
 }
 
