--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,8 @@
     transform: rotate(360deg);
   }
 }
+
+body {
+  background-color: #94252e;
+  background-image: linear-gradient(  #94252e 5%,  #94252e 15%,   #94252e 60%);
+}
