--- a/src/index.css
+++ b/src/index.css
@@ -1,20 +1,21 @@
 * {
   margin: 0;
   padding: 0;
-  border :0;
-  outline :0;
+  border: 0;
+  outline: 0;
   box-sizing: border-box;
   list-style: none;
   text-decoration: none;
 }
 
 :root {
-  --color-bg-nav:#E5E3E4; 
+  --color-bg-nav: #E5E3E4;
   --color-bg-variant: #469597;
-  --color-primary: #D0C9D0;;
-  --color-primary-variant: rgba(77, 181, 255, 0.4 );
+  --color-primary: #D0C9D0;
+  ;
+  --color-primary-variant: rgba(77, 181, 255, 0.4);
   --color-white: #BBC6C8;
-  --color-light : #6A7793;
+  --color-light: #6A7793;
 
 
   --container-width-lg: 75%;
@@ -23,4 +24,9 @@
 
   --transition: all 400ms ease;
 
+}
+
+body {
+  font-family: 'Corinthia', cursive;
+  font-family: 'Gloock', serif;
 }
