edit Home.jsx slider and nav styles

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 
 body {
-  background-color: #94252e;
-  background-image: linear-gradient(#94252e 5%, #94252e 15%, #94252e 60%);
+  background-color: #5A1B0E;
+  background-image: url('../src/assets/heroimg.png');
 }
 
 .flex__center {
@@ -66,3 +66,4 @@ body {
     line-height: 70px;
   }
 }
+
