--- a/src/index.css
+++ b/src/index.css
@@ -20,6 +20,8 @@
 body {
   font-family: 'Corinthia', cursive;
   font-family: 'Gloock', serif;
+  background-color: #5A1B0E;
+  background-image: linear-gradient(#5A1B0E 5%, #5A1B0E 15%, #5A1B0E 60%);
 }
 
 * {
