--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Cormorant+Upright:wght@300;400;500;600;700&family=Open+Sans:wght@300;400;500;600;700&display=swap');
 
 :root {
-  --font-base: 'Cormorant Upright', serif;
+  --font-base: 'Gloock', serif;
   --color-bg-nav:#E5E3E4; 
   --color-bg-variant: #469597;
   --color-primary: #D0C9D0;
