--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,6 @@
-
+.section__padding {
+  padding: 4rem 6rem;
+}
 
 .flex__center {
   display: flex;
@@ -6,26 +8,30 @@
   align-items: center;
 }
 
+.p-slogan {
+  font-family: var(--font-alt);
+  color: var(--color-white);
+  font-weight: 400;
+  letter-spacing: 0.04em;
+  text-transform: capitalize;
+  line-height: 28px;
+  font-size: 16px;
+}
+.headtext__cormorant {
+  font-family: var(--font-base);
+  color: var(--color-darkhaki);
+  font-size: 64px;
+  line-height: 83.2px;
+  letter-spacing: 0.04em;
+  text-transform: capitalize;
+}
+
+.logo-img {
+  width: 8rem;
+}
 
 
 /* Media Queries*/
-@media screen and (max-width: 1150px) {
-  .app__wrapper {
-    flex-direction: column;
-  }
-
-  .app__wrapper_img {
-    margin: 5rem 0 0 0;
-  }
-
-  .app__wrapper_img-reverse {
-    margin: 0 0 5rem 0;
-  }
-
-  .app__wrapper_img img {
-    width: 100%;
-  }
-}
 
 @media screen and (max-width: 850px) {
   .section__padding {
@@ -38,26 +44,13 @@
     padding: 4rem 2rem;
   }
   
-  .p__cormorant {
-    font-size: 21px;
-  }
-
-  .p__opensans {
+  .p-slogan {
     font-size: 14px;
   }
 }
 
 @media screen and (max-width: 450px) {
-  .p__opensans {
+  .p-slogan {
     font-size: 12px;
-  }
-
-  .p__cormorant {
-    font-size: 19px;
-  }
-
-  .headtext__cormorant {
-    font-size: 45px;
-    line-height: 70px;
   }
 }
