--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Cormorant+Upright:wght@300;400;500;600;700&family=Open+Sans:wght@300;400;500;600;700&display=swap');
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  scroll-behavior: smooth;
+}
 
 :root {
   --font-base: 'Cormorant Upright', serif;
@@ -6,8 +12,9 @@
   --color-bg-variant: #469597;
   --color-primary: #D0C9D0;;
   --color-primary-variant: rgba(77, 181, 255, 0.4 );
-  --color-white: #BBC6C8;
-  --color-light : #6A7793;
+  --color-darkhaki: darkkhaki;
+  --color-black: #0C0C0C;
+  --color-white: #FFFFFF;
 
 
   --container-width-lg: 75%;
@@ -16,12 +23,6 @@
 
 }
 
-* {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
-  scroll-behavior: smooth;
-}
 
 a {
   color: unset;
