--- a/src/App.css
+++ b/src/App.css
@@ -3,13 +3,37 @@ body {
   background-color: #5A1B0E;
   background-image: url('../src/assets/heroimg.png');
 }
+.section__padding {
+  padding: 4rem 6rem;
+}
 
 .flex__center {
   display: flex;
   justify-content: center;
   align-items: center;
 }
+.p-slogan {
+  font-family: var(--font-alt);
+  color: var(--color-white);
+  font-weight: 400;
+  letter-spacing: 0.04em;
+  text-transform: capitalize;
+  line-height: 28px;
+  font-size: 16px;
+}
+.headtext__cormorant {
+  font-family: var(--font-base);
+  color: var(--color-darkhaki);
+  font-size: 64px;
+  line-height: 83.2px;
+  letter-spacing: 0.04em;
+  text-transform: capitalize;
+}
 
+
+.logo-img {
+  width: 8rem;
+}
 
 
 /* Media Queries*/
@@ -42,23 +66,16 @@ body {
     padding: 4rem 2rem;
   }
   
-  .p__cormorant {
+  .p-slogan{
     font-size: 21px;
   }
 
-  .p__opensans {
-    font-size: 14px;
-  }
 }
 
 
 @media screen and (max-width: 450px) {
-  .p__opensans {
+  .p-slogan {
     font-size: 12px;
-  }
-
-  .p__cormorant {
-    font-size: 19px;
   }
 
   .headtext__cormorant {
