--- a/src/container/Gallery/Gallery.css
+++ b/src/container/Gallery/Gallery.css
@@ -1,22 +1,37 @@
-
 .best-gallery {
     flex-direction: column;
     display: block;
     align-items: center;
     justify-content: center;
-    background:rgba(77, 181, 255, 0.4 );
+    background: var(--color-black);
     padding: 4rem 0 4rem 6rem;
 }
-.best-gallery img{
+
+.best-gallery img {
     display: flex;
-    justify-content:flex-start;
+    justify-content: flex-start;
     align-items: center;
+    height: 5rem;
+}
+
+.text-center {
+    width: 100%;
+    height: 100px;
+}
+
+
+.text-center img {
+    height: 100%;
+    object-fit: cover;
+    position: relative;
+    display: block;
+    width: 100%;
 }
 
 .best-gallery-content {
     display: flex;
     justify-content: center;
-    align-items:center;
+    align-items: center;
     flex-direction: column;
     min-width: 500px;
     padding-right: 2rem;
@@ -29,27 +44,28 @@
     justify-content: center;
     flex-direction: row;
     max-width: 50%;
-    position: relative; 
+    position: relative;
 }
+
 .best-gallery-images_container h5 {
-    margin:1.2rem 0 2rem ;
-    text-align:center;
-    color: black;
+    margin: 1.2rem 0 2rem;
+    text-align: center;
 }
+
 .best-gallery-images_container {
-    display:inline-flex;
+    display: inline-flex;
     vertical-align: top;
     text-align: center;
     flex-direction: row;
     width: max-content;
     overflow-x: scroll;
     -ms-overflow-style: none;
-    scrollbar-width: none;  
+    scrollbar-width: none;
 }
 
 .best-gallery-images_container::-webkit-scrollbar {
     display: none;
-    
+
 }
 
 .best-gallery-images_card {
@@ -60,7 +76,7 @@
 }
 
 
-.gallery__image-icon  {
+.gallery__image-icon {
     position: absolute;
     color: #fff;
     font-size: 2rem;
@@ -70,12 +86,14 @@
 }
 
 
-.best-gallery-images_card img{
+.best-gallery-images_card img {
     width: 100%;
     height: 100%;
     object-fit: cover;
     opacity: 1;
-    transition: .10s ease;
+    transition: .5s ease;
+    object-fit: cover;
+    position: relative;
 }
 
 .best-gallery-images_card:hover img {
@@ -94,11 +112,32 @@
     padding: 0 1rem;
     position: absolute;
     bottom: 5%;
+    list-style: none;
 }
-.best-gallery-images_card h5{
+
+.best-gallery-images_card h5 {
     text-decoration: none;
-    color: darkkhaki;
-    
+    color: var(--color-darkhaki);
+    list-style: none;
+}
+
+.custom-button {
+    font-family: var(--font-base);
+    font-weight: 700;
+    letter-spacing: 0.04em;
+    line-height: 28px;
+    font-size: 16px;
+    padding: 0.5rem 1.5rem;
+    border-radius: 1px;
+    cursor: pointer;
+}
+
+.custom-button:hover {
+    background: transparent;
+    border-radius: 2rem;
+    overflow: hidden;
+    transform: rotate(360deg);
+    transition: all 400ms ease;
 }
 
 .gallery__arrow-icon {
@@ -113,21 +152,9 @@
     color: var(--color-white);
 }
 
-@media screen and (min-width: 2000px) {
-    .best-gallery-content button {
-        margin-top: 2rem;
-    }
+/*Media queries*/
 
-    .best-gallery-content {
-        min-width: 1000px;
-        padding-right: 4rem;
-    }
 
-    .best-gallery-images_card {
-        min-width: 400px;
-        height: 547px;
-    }
-}
 
 @media screen and (max-width: 1150px) {
     .best-gallery {
@@ -149,8 +176,8 @@
 @media screen and (max-width: 650px) {
     .best-gallery {
         padding: 4rem 0 4rem 2rem;
-    }  
-    
+    }
+
     .best-gallery-content {
         min-width: 100%;
     }
