--- a/src/components/Nav/nav.css
+++ b/src/components/Nav/nav.css
@@ -28,6 +28,7 @@ nav {
 
 nav a:hover {
     background: rgba(0, 0, 0, 0.3);
+    opacity: 80%;
     text-decoration: none;
     cursor: pointer;
 }
@@ -43,7 +44,6 @@ nav link.active {
     background: rgba(77, 181, 255, 0.4);
 
 }
-
 
 
 @media screen and (max-width: 1024px) {
