chnaged bg colour on menu page

--- a/src/container/Menus/BestMenu.css
+++ b/src/container/Menus/BestMenu.css
@@ -1,6 +1,6 @@
 .best-specialMenu {
     flex-direction: column;
-    background:var(--color-bg-variant);
+    background-color: #5A1B0E;
 }
 
 .best-specialMenu-title {
