--- a/src/pages/Contact.css
+++ b/src/pages/Contact.css
@@ -61,8 +61,10 @@
   }
 }
 
-@media screen and (max-width: 990px) {
-  .wrapper {
-      height: 1290px;
+@media screen and (max-width: 700px) {
+  .contact-wrapper {
+      
+      max-width: 90%;
+      
     }
 }
